[build-system]
requires=["setuptools", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pyql"
authors = [
    {name = "Didrik Pinte"},
    {name = "Patrick Henaff"},
]
dependencies = [
    "pandas",
    "tabulate",
]
license = "MIT"
version = "0.0.1"

[tool.setuptools]
packages = ["quantlib"]
